# T-spline-android-viewer

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/alex/t_spline/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/rhino/: complex.tsm  hill.tsm  mouse.tsm
app/src/main/cpp/: DataGenerator.h~  FileReader.cpp  FileReader.h  TsplineNativeActivity.cpp  TsplineNativeActivity.cpp~  TsplineNativeActivity2.cpp  TsplineRenderer.cpp  TsplineRenderer.cpp~  TsplineRenderer.h  TsplineRenderer.h~  TsplineRenderer2.cpp  mouse.cpp  mouse.h  simple.h
app/src/main/cpp/ndk_helper/: JNIHelper.cpp  JNIHelper.h
app/src/main/cpp/rhbuilder/: rhbuilder.cpp  rhbuilder.h  rhparser.cpp  rhparser.h
app/src/main/cpp/tspline/: basis.cpp  basis.h  convert.cpp  cross.cpp  cross.h  derivator.cpp  derivator.h  editor.cpp  editor.h  extractor.cpp  extractor.h  factory.cpp  factory.h  finder.cpp  finder.h  multiplicity.cpp  multiplicity.h  splbase.cpp  splbase.h  tessellator.cpp  tessellator.h  tjunction.cpp  tjunction.h  trimesh.cpp  trimesh.h  tspline.cpp  tspline.h  utils.cpp  utils.h  validator.cpp  validator.h  virtual.cpp  virtual.h  visitor.cpp  visitor.h
app/src/main/java/alex/t_spline/helper/: NDKHelper.java
app/src/main/java/alex/t_spline/t_spline/: MainActivity.java  TsplineApplication.java  TsplineNativeActivity.java  TsplineNativeActivity2.java
app/src/main/res/drawable/: custom_button.xml
app/src/main/res/layout/: main_activity.xml  widgets.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/alex/t_spline/: ExampleUnitTest.java
